--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <browser.version>ad9b865</browser.version>
+        <json-editor.version>0.7.21</json-editor.version>
     </properties>
 
     <dependencies>
@@ -41,6 +43,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.data</groupId>-->
+        <!--<artifactId>spring-data-rest-hal-browser</artifactId>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+        <!--<groupId>org.webjars</groupId>-->
+        <!--<artifactId>hal-browser</artifactId>-->
+        <!--<version>ad9b865</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.webjars</groupId>-->
+        <!--<artifactId>json-editor</artifactId>-->
+        <!--<version>0.7.21</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -70,6 +87,115 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-dependency-plugin</artifactId>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>unpack-hal-browser</id>-->
+            <!--<phase>process-resources</phase>-->
+            <!--<goals>-->
+            <!--<goal>unpack</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<artifactItems>-->
+            <!--<artifactItem>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>hal-browser</artifactId>-->
+            <!--</artifactItem>-->
+            <!--</artifactItems>-->
+            <!--<outputDirectory>${project.build.directory}/hal-browser</outputDirectory>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>unpack-json-editor</id>-->
+            <!--<phase>process-resources</phase>-->
+            <!--<goals>-->
+            <!--<goal>unpack</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<artifactItems>-->
+            <!--<artifactItem>-->
+            <!--<groupId>org.webjars</groupId>-->
+            <!--<artifactId>json-editor</artifactId>-->
+            <!--</artifactItem>-->
+            <!--</artifactItems>-->
+            <!--<outputDirectory>${project.build.directory}/json-editor</outputDirectory>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
+
+            <!--<plugin>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-antrun-plugin</artifactId>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>process-resources</phase>-->
+            <!--<goals>-->
+            <!--<goal>run</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<target>-->
+            <!--<copy todir="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser">-->
+            <!--<fileset dir="${project.build.directory}/hal-browser/META-INF/resources/webjars/hal-browser/${browser.version}" />-->
+            <!--</copy>-->
+            <!--<copy todir="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser/vendor/js">-->
+            <!--<fileset dir="${project.build.directory}/json-editor/META-INF/resources/webjars/json-editor/${json-editor.version}" />-->
+            <!--</copy>-->
+            <!--<copy file="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser/index.html"-->
+            <!--tofile="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser/index.html" />-->
+            <!--<replace file="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser/index.html">-->
+            <!--<replacefilter>-->
+            <!--<replacetoken><![CDATA[</body>]]></replacetoken>-->
+            <!--<replacevalue><![CDATA[-->
+            <!--<script id="dynamic-request-template" type="text/template">-->
+            <!--<div class="modal-header">-->
+            <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
+            <!--<h3>Create/Update</h3>-->
+            <!--</div>-->
+
+            <!--<form class="non-safe" action="<%= href %>">-->
+            <!--<div class="modal-body" style="padding-top: 0px">-->
+            <!--<div id="jsoneditor"></div>-->
+
+            <!--<div class="well well-small" style="padding-bottom: 0px;">-->
+            <!--<div class="container-fluid">-->
+            <!--<div class="row-fluid">-->
+            <!--<div class="control-group">-->
+            <!--<label class="control-label" style="display: inline-block; font-weight: bold;">Action:</label>-->
+            <!--<input name="method" type="text" class="method controls" style="width: 98%" value="POST" />-->
+            <!--<input name="url" type="text" class="url controls" style="width: 98%" value="<%= href %>" />-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="modal-footer">-->
+            <!--<button type="submit" class="btn btn-primary">Make Request</button>-->
+            <!--</div>-->
+            <!--</form>-->
+            <!--</script>-->
+
+            <!--<script src="vendor/js/jsoneditor.js"></script>-->
+            <!--<script src="js/CustomPostForm.js"></script>-->
+
+            <!--</body>]]>-->
+            <!--</replacevalue>-->
+            <!--</replacefilter>-->
+            <!--</replace>-->
+            <!--<replace file="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser/index.html">-->
+            <!--<replacefilter>-->
+            <!--<replacetoken>The HAL Browser</replacetoken>-->
+            <!--<replacevalue>The HAL Browser (for Spring Data REST)</replacevalue>-->
+            <!--</replacefilter>-->
+            <!--</replace>-->
+            <!--<delete file="${project.build.outputDirectory}/META-INF/spring-data-rest/hal-browser/index.html" />-->
+            <!--</target>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
