--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -12,6 +13,7 @@ buildscript {
 
 plugins {
     id 'io.franzbecker.gradle-lombok' version '1.14'
+    id 'org.asciidoctor.convert' version '1.5.3'
 }
 
 apply plugin: 'java'
@@ -19,6 +21,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.asciidoctor.convert'
 
 group = 'hr.mladen.cikara'
 version = '0.0.1-SNAPSHOT'
@@ -33,6 +36,11 @@ repositories {
 }
 
 
+ext {
+    snippetsDir = file('build/generated-snippets')
+}
+
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
@@ -44,8 +52,23 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.1.1')
     testImplementation('org.junit.platform:junit-platform-launcher:1.3.1')
     testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+
+    asciidoctor('org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.2.RELEASE')
 }
 
 test {
+    outputs.dir snippetsDir
     useJUnitPlatform()
+}
+
+asciidoctor {
+    dependsOn test
+    inputs.dir snippetsDir
+}
+
+bootJar {
+    dependsOn asciidoctor
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
 }
