--- a/build.gradle
+++ b/build.gradle
@@ -71,4 +71,8 @@ bootJar {
     from ("${asciidoctor.outputDir}/html5") {
         into 'static/docs'
     }
+    //TODO: test reports may be unnecessary
+    from ("${project.buildDir}/reports/tests") {
+        into 'static/tests'
+    }
 }
