--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'jacoco'
+apply plugin: 'pmd'
+apply plugin: 'checkstyle'
+apply plugin: 'findbugs'
 
 group = 'hr.mladen.cikara'
 version = '0.0.1-SNAPSHOT'
