--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.1.1')
     testImplementation('org.junit.platform:junit-platform-launcher:1.3.1')
     testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+    testImplementation('org.assertj:assertj-core')
 
     asciidoctor('org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.2.RELEASE')
 }
