Commenting out configuration for logging SQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.jpa.open-in-view = false
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#
+# Logging SQL
+#
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate=INFO
+#logging.level.org.hibernate.SQL=INFO #DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
