Upgrade to new version of Spring Boot (2.1.0)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.open-in-view = false
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
+
+logging.level.web=TRACE
+spring.http.log-request-details=true
