--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.open-in-view = false
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
-
 logging.level.web=TRACE
 spring.http.log-request-details=true
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.write-dates-with-zone-id=true
