--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.http.log-request-details=true
+spring.jackson.serialization.write-dates-with-zone-id=true
 spring.jpa.open-in-view = false
-
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
 #
 # Logging SQL
 #
@@ -11,5 +14,4 @@ spring.jpa.open-in-view = false
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
 logging.level.web=TRACE
-spring.http.log-request-details=true
-spring.jackson.serialization.write-dates-with-zone-id=true
+
