--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,8 @@ apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'jdepend'
 
-
 group = 'hr.mladen.cikara'
 version = '0.0.1-SNAPSHOT'
-
 
 description = "spring-hal-browser-learning-test"
 
@@ -40,11 +38,12 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/milestone" }
 }
-
 
 ext {
     snippetsDir = file('build/generated-snippets')
+    springCloudVersion = 'Greenwich.M3'
 }
 
 
@@ -52,17 +51,32 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-hateoas')
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
     implementation('javax.json:javax.json-api')
     implementation('org.glassfish:javax.json:1.1.3')
+
     compileOnly('org.projectlombok:lombok')
+
     runtimeOnly('com.h2database:h2')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.1.1')
     testImplementation('org.junit.platform:junit-platform-launcher:1.3.1')
     testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+    testImplementation('org.springframework.security:spring-security-test')
     testImplementation('org.assertj:assertj-core')
 
+    annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
+
     asciidoctor('org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.2.RELEASE')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
