--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,16 @@ spring.mvc.throw-exception-if-no-handler-found=true
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
 logging.level.web=TRACE
+
+
+# OAuth2 Authorization server configuration
+security.oauth2.client.client-id=devglan-client
+security.oauth2.client.client-secret=password
+security.oauth2.client.authorized-grant-types=authorization_code, password, client_credentials, implicit, refresh_token
+security.oauth2.client.scope=read, write, trust
+# 60*60 = 3600 , 1 hour
+security.oauth2.client.access-token-validity-seconds=3600
+# 6*60*60 = 21,600 , 6 hours
+security.oauth2.client.refresh-token-validity-seconds=21600
+
+custom.jwt.signingKey=as466gf
