Spring security configuration for h2 console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
-#logging.level.org.springframework.web=INFO
+logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
@@ -26,3 +26,7 @@ security.oauth2.client.access-token-validity-seconds=3600
 security.oauth2.client.refresh-token-validity-seconds=21600
 
 custom.jwt.signingKey=as466gf
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
