--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,21 @@ spring.http.log-request-details=true
 spring.jackson.serialization.write-dates-with-zone-id=true
 spring.jpa.open-in-view = false
 spring.mvc.throw-exception-if-no-handler-found=true
+
 #
 # Logging SQL
 #
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
-logging.level.web=TRACE
 
 
 # OAuth2 Authorization server configuration
-security.oauth2.client.client-id=devglan-client
+security.oauth2.client.client-id=application-client
 security.oauth2.client.client-secret=password
 security.oauth2.client.authorized-grant-types=authorization_code, password, client_credentials, implicit, refresh_token
 security.oauth2.client.scope=read, write, trust
