Documenting refreshing authorization token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO #DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
+logging.level.hr.mladen.cikara=DEBUG
 
 
 # OAuth2 Authorization server configuration
