Configuring https  for tomcat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ custom.jwt.signingKey=as466gf
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=mladen
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
