--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,13 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.asciidoctor.convert'
-apply plugin: 'pmd'
-apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
-apply plugin: 'jdepend'
 apply plugin: 'groovy'
 
 apply from: "$rootDir/gradle/jacoco.gradle"
+apply from: "$rootDir/gradle/pmd.gradle"
+apply from: "$rootDir/gradle/checkstyle.gradle"
+apply from: "$rootDir/gradle/findbugs.gradle"
+apply from: "$rootDir/gradle/jdepend.gradle"
 
 group = 'hr.mladen.cikara'
 version = '0.0.1-SNAPSHOT'
@@ -97,30 +97,5 @@ bootJar {
     dependsOn asciidoctor
     from ("${asciidoctor.outputDir}/html5") {
         into 'static/docs'
-    }
-}
-
-checkstyle {
-    toolVersion '8.13'
-}
-
-tasks.withType(Checkstyle) {
-    reports {
-        xml.enabled = false
-        html.enabled = true
-    }
-}
-
-tasks.withType(FindBugs) {
-    reports {
-        xml.enabled = false
-        html.enabled = true
-    }
-}
-
-tasks.withType(JDepend) {
-    reports {
-        xml.enabled = false
-        text.enabled = true
     }
 }
