--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,18 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'groovy'
 
-apply from: "$rootDir/gradle/jacoco.gradle"
-apply from: "$rootDir/gradle/pmd.gradle"
-apply from: "$rootDir/gradle/checkstyle.gradle"
-apply from: "$rootDir/gradle/findbugs.gradle"
-apply from: "$rootDir/gradle/jdepend.gradle"
-apply from: "$rootDir/gradle/asciidoctor.gradle"
+apply from: 'gradle/jacoco.gradle'
+apply from: 'gradle/pmd.gradle'
+apply from: 'gradle/checkstyle.gradle'
+apply from: 'gradle/findbugs.gradle'
+apply from: 'gradle/jdepend.gradle'
+apply from: 'gradle/asciidoctor.gradle'
+
+if (project.hasProperty('env') &&  project.findProperty('env') == 'dev') {
+    apply from: 'gradle/profile_dev.gradle'
+} else {
+    apply from: 'gradle/profile_default.gradle'
+}
 
 group = 'hr.mladen.cikara'
 version = '0.0.1-SNAPSHOT'
@@ -57,9 +63,6 @@ dependencies {
     implementation('org.glassfish:javax.json:1.1.3')
 
     compileOnly('org.projectlombok:lombok')
-
-    runtimeOnly('com.h2database:h2')
-    runtimeOnly('org.postgresql:postgresql')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.1.1')
