Adding database connection for dev properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/hal-postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/hal
 spring.datasource.username=hal
 spring.datasource.password=hal
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
