--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,4 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/hal
 spring.datasource.username=hal
 spring.datasource.password=hal
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
