--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,10 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/hal
-spring.datasource.username=hal
-spring.datasource.password=hal
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=haluser
+spring.datasource.password=haluser
+
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+spring.flyway.user=hal
+spring.flyway.password=hal
+spring.flyway.validate-on-migrate=true
