--- a/gradle/profile_dev.gradle
+++ b/gradle/profile_dev.gradle
@@ -1,5 +1,7 @@
 dependencies {
-    runtimeOnly('org.postgresql:postgresql')
+    implementation('org.flywaydb:flyway-core')
+
+    runtimeOnly('org.postgresql:postgresql')    
 
     testImplementation('com.h2database:h2')
 }
