Disabling flyway for testing phase

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,7 @@ spring.datasource.password=haluser
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
+spring.flyway.enabled=true
 spring.flyway.user=hal
 spring.flyway.password=hal
 spring.flyway.validate-on-migrate=true
