--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ security.oauth2.client.access-token-validity-seconds=3600
 security.oauth2.client.refresh-token-validity-seconds=21600
 
 custom.jwt.signingKey=as466gf
+
+spring.flyway.enabled=false
