--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,7 @@
 import com.github.spotbugs.SpotBugsTask
 
-buildscript {
-    ext {
-        springBootVersion = '2.1.2.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
-
 plugins {
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
     id 'io.franzbecker.gradle-lombok' version '1.14'
     id 'org.asciidoctor.convert' version '1.5.3'
     id 'com.github.spotbugs' version '1.6.10'
@@ -46,6 +35,12 @@ description = "spring-hal-browser-learning-test"
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/milestone" }
@@ -65,8 +60,6 @@ dependencies {
     implementation('javax.json:javax.json-api')
     implementation('org.glassfish:javax.json:1.1.3')
 
-    compileOnly('org.projectlombok:lombok')
-
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.1.1')
     testImplementation('org.junit.platform:junit-platform-launcher:1.3.1')
@@ -76,6 +69,7 @@ dependencies {
     testImplementation('org.codehaus.groovy:groovy')
     testImplementation('org.spockframework:spock-spring:1.2-groovy-2.5')
 
+    annotationProcessor('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
 }
 
