--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,14 @@ plugins {
     id 'io.franzbecker.gradle-lombok' version '1.14'
     id 'org.asciidoctor.convert' version '1.5.3'
     id 'com.github.spotbugs' version '1.6.10'
+    id 'java'
+    id 'groovy'
+    id 'idea'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'groovy'
 
+apply from: 'gradle/test.gradle'
 apply from: 'gradle/integration-test.gradle'
 apply from: 'gradle/jacoco.gradle'
 apply from: 'gradle/pmd.gradle'
@@ -60,15 +59,6 @@ dependencies {
     implementation('javax.json:javax.json-api')
     implementation('org.glassfish:javax.json:1.1.3')
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.1.1')
-    testImplementation('org.junit.platform:junit-platform-launcher:1.3.1')
-    testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
-    testImplementation('org.springframework.security:spring-security-test')
-    testImplementation('org.assertj:assertj-core')
-    testImplementation('org.codehaus.groovy:groovy')
-    testImplementation('org.spockframework:spock-spring:1.2-groovy-2.5')
-
     annotationProcessor('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
 }
@@ -77,10 +67,6 @@ dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
-}
-
-test {
-    useJUnitPlatform()
 }
 
 tasks.withType(SpotBugsTask) {
