--- a/gradle/integration-test.gradle
+++ b/gradle/integration-test.gradle
@@ -33,5 +33,10 @@ task integrationTest(type: Test) {
     mustRunAfter test
 }
 
+integrationTest {
+    useJUnitPlatform()
+}
+
 check.dependsOn integrationTest
 
+integrationTest.mustRunAfter test
