--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ import com.github.spotbugs.SpotBugsTask
 plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
     id 'io.franzbecker.gradle-lombok' version '1.14'
-    id 'org.asciidoctor.convert' version '1.5.3'
     id 'com.github.spotbugs' version '1.6.10'
     id 'java'
     id 'groovy'
     id 'idea'
+    id 'org.asciidoctor.convert' version '1.5.3'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -59,6 +59,7 @@ dependencies {
     implementation('javax.json:javax.json-api')
     implementation('org.glassfish:javax.json:1.1.3')
 
+    compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
     annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
 }
