--- a/gradle/test.gradle
+++ b/gradle/test.gradle
@@ -1,5 +1,7 @@
 dependencies {
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'junit', module:'junit'
+    }
 
     testImplementation('org.junit.jupiter:junit-jupiter-engine')
     testImplementation('org.junit.vintage:junit-vintage-engine')
