--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,13 @@ spring.mvc.throw-exception-if-no-handler-found=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
-#logging.level.org.springframework=DEBUG
+##logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO #DEBUG
+##logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
-logging.level.hr.mladen.cikara=DEBUG
+##logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.hr.mladen.cikara=DEBUG
 
 
 # OAuth2 Authorization server configuration
