--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 ##logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO #TRACE
 ##logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#logging.level.hr.mladen.cikara=DEBUG
+logging.level.hr.mladen.cikara=DEBUG
 
 
 # OAuth2 Authorization server configuration
