Fixing profiles so dev profile can be run from IDE

--- a/gradle/profile_default.gradle
+++ b/gradle/profile_default.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    implementation('org.flywaydb:flyway-core')
+    
     runtimeOnly('com.h2database:h2')
     runtimeOnly('org.postgresql:postgresql')
 }
