--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=INFO
 #logging.level.org.hibernate.SQL=INFO
 #logging.level.org.hibernate.SQL=DEBUG
